fix z-index of header

--- a/packages/components/src/local/Header/Header.css
+++ b/packages/components/src/local/Header/Header.css
@@ -7,7 +7,7 @@
   color: var(--_font-colour);
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 10;
 }
 
 .hd-header_container {
